# vtuber_rust_tracker

./: .gitignore  IMPLEMENTATION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/flutter_openseeface_plugin/: FlutterOpenseefacePlugin.kt
android/src/test/kotlin/com/example/flutter_openseeface_plugin/: FlutterOpenseefacePluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_openseeface_plugin_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_openseeface_plugin.podspec
ios/Classes/: FlutterOpenseefacePlugin.swift
lib/: flutter_openseeface_plugin.dart  flutter_openseeface_plugin_method_channel.dart  flutter_openseeface_plugin_platform_interface.dart
lib/src/: face_tracker.dart
lib/src/exceptions/: exceptions.dart
lib/src/models/: models.dart
linux/: CMakeLists.txt  flutter_openseeface_plugin.cc  flutter_openseeface_plugin_private.h
linux/include/flutter_openseeface_plugin/: flutter_openseeface_plugin.h
linux/test/: flutter_openseeface_plugin_test.cc
macos/: flutter_openseeface_plugin.podspec
macos/Classes/: FlutterOpenseefacePlugin.swift
rust/: Cargo.toml  build.rs
rust/src/: error.rs  lib.rs  models.rs
rust/src/api/: mod.rs
rust/src/face_tracking/: tracker.rs
scripts/: build.bat  build.sh  dev.ps1  setup.bat  setup.ps1  setup.sh
test/: flutter_openseeface_plugin_method_channel_test.dart  flutter_openseeface_plugin_test.dart
windows/: CMakeLists.txt  flutter_openseeface_plugin.cpp  flutter_openseeface_plugin.h  flutter_openseeface_plugin_c_api.cpp
windows/include/flutter_openseeface_plugin/: flutter_openseeface_plugin_c_api.h
windows/test/: flutter_openseeface_plugin_test.cpp
