[package]
name = "flutter_openseeface_plugin"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Flutter plugin for face tracking using openseeface-rs"
repository = "https://github.com/devartblake/flutter_openseeface_plugin"

[lib]
name = "flutter_openseeface_plugin"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# OpenSeeFace Rust implementation
openseeface = { git = "https://github.com/ricky26/openseeface-rs", version = "0.1" }

# Flutter Rust Bridge
flutter_rust_bridge = "2.0"
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"

# Image processing
image = { version = "0.25", features = ["jpeg", "png"] }
imageproc = "0.25"
ndarray = "0.16"

# Async/concurrency
futures = "0.3"
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# FFI helpers
libc = "0.2"
lazy_static = "1.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
android_logger = "0.14"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
objc = "0.2"
cocoa = "0.25"
core-graphics = "0.23"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["windef", "winuser", "wingdi"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"

[build-dependencies]
flutter_rust_bridge_codegen = "2.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
